--- a/css/orders.css
+++ b/css/orders.css
@@ -81,6 +81,8 @@ li a:hover{
     background-size: cover;
     animation: transitionIn 0.75s;
     height: 100vh;
+    background-position: center ;
+
 }
 
 .order-options {
@@ -89,7 +91,6 @@ li a:hover{
     margin: auto;
     margin-bottom: 5px;
     border-radius: 15px;
-    overflow: hidden;
     position: relative;
     clear: both;
 }
@@ -107,7 +108,6 @@ li a:hover{
     display: flex;
     gap: 16px;
     padding: 12px 24px;
-    list-style: none;
     overflow-x: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -202,4 +202,44 @@ li a:hover{
     background-color: #3994af;
 }
 
+.card-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 100px;
+    overflow-y: scroll;
+    max-height: 700px;
+    margin: 16px auto;
+    border-radius: 15px;  
+    -ms-overflow-style: none;
+}
 
+
+.card-container::-webkit-scrollbar {
+    display: none;
+}
+
+.card {
+    max-width: 100%;
+    width: 725px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    margin: 20px;
+    display: inline-block;
+}
+
+.card-content {
+    padding: 16px;
+}
+
+.card-content h3 {
+    font-size: 28px;
+    margin-bottom: 8px;
+}
+
+.card-content p {
+    color: #666;
+    font-size: 15px;
+    line-height: 1.3;
+}
