--- a/css/orders.css
+++ b/css/orders.css
@@ -212,6 +212,7 @@ li a:hover{
     margin: 16px auto;
     border-radius: 15px;  
     -ms-overflow-style: none;
+    padding-bottom: 500px;
 }
 
 
@@ -242,4 +243,8 @@ li a:hover{
     color: #666;
     font-size: 15px;
     line-height: 1.3;
+}
+
+.hide {
+    display: none;
 }
