--- a/css/orders.css
+++ b/css/orders.css
@@ -27,22 +27,15 @@ body {
 
 .header-container {
     background-color: #45badd;
-    text-align: center;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 60px;
+    overflow: hidden;
 }
 
-.address, .welcome{
-    border-radius: 25px;
-    background-color: #57cbee;
-    padding: 8px;
+.header-container .logo {
+    position: relative;
+    font-size: 1.5em;
+    color: #fff;
+    font-weight: 600;
 }
-
-.address, .welcome, .title{
-    color: #ffffff;
-} 
 
 .nav-container ul {
     width: 100%;
@@ -73,7 +66,45 @@ li a:hover{
     background-color: #57cbee;
     font-size: 3vh;
 }
-
+.header-container a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+  
+.header-container a:hover {
+    color: black;
+}
+  
+.header-container .icon {
+    display: none;
+}
+  
+@media screen and (max-width: 800px) {
+  .header-container a:not(:first-child) {display: none;}
+  .header-container a.icon {
+    float: right;
+    display: block;
+  }
+}
+  
+@media screen and (max-width: 800px) {
+  .header-container.responsive {position: relative;}
+  .header-container.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .header-container.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}   
 .order-container {
     
     background-image: url(../images/icebergBG.png);
@@ -247,4 +278,11 @@ li a:hover{
 
 .hide {
     display: none;
+}
+
+
+@media only screen and (max-width: 730px) {
+    .card {
+        width: 360px;
+    }    
 }
