--- a/css/style.css
+++ b/css/style.css
@@ -21,18 +21,13 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+body { 
+    overflow: hidden;
+}
 
 .header-container {
     background-color: #45badd;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 100px;
-    z-index: 10;
+    overflow: hidden;
 }
 
 .header-container .logo {
@@ -40,31 +35,6 @@
     font-size: 1.5em;
     color: #fff;
     font-weight: 600;
-}
-
-.header-container .header-tabs {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 10px 0;
-}
-
-.header-container .header-tabs li {
-    margin: 0 10px;
-    color: #fff;
-    font-weight: 500;
-    letter-spacing: 1px;
-}
-
-.header-container .header-tabs li a {
-    margin: 0 10px;
-    color: #fff;
-    font-weight: 500;
-    letter-spacing: 1px;
-}
-
-.header-container .header-tabs li a:hover {
-    color: #57cbee;
 }
 
 .main-container {
@@ -117,4 +87,55 @@
 .go-back li a {
     font-size: 3vh;   
 }
+  
+.header-container a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+  
+.header-container a:hover {
+    color: black;
+}
+  
+.header-container .icon {
+    display: none;
+}
 
+.main-container h1 {
+    font-size: 49px;
+    font-weight: bold;
+    line-height: 52px;
+    color: rgb(255, 255, 255);
+    padding: 0px;
+    margin-bottom: 32px;
+    text-align: center;
+    max-width: 450px;
+    margin-right: auto;
+    margin-left: auto;
+}
+@media screen and (max-width: 800px) {
+  .header-container a:not(:first-child) {display: none;}
+  .header-container a.icon {
+    float: right;
+    display: block;
+  }
+}
+  
+@media screen and (max-width: 800px) {
+  .header-container.responsive {position: relative;}
+  .header-container.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .header-container.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}   
