--- a/css/orders.css
+++ b/css/orders.css
@@ -259,6 +259,12 @@ li a:hover{
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     margin: 20px;
     display: inline-block;
+    cursor: pointer;
+    transition: transform .2s
+}
+
+.card:hover {
+    transform: scale(1.05);
 }
 
 .card-content {
