--- a/css/style.css
+++ b/css/style.css
@@ -111,12 +111,14 @@ body {
     font-weight: bold;
     line-height: 52px;
     color: rgb(255, 255, 255);
-    padding: 0px;
+    padding: 10px;
     margin-bottom: 32px;
     text-align: center;
     max-width: 450px;
     margin-right: auto;
     margin-left: auto;
+    background-color: rgba(200, 200, 200, 0.3);
+    border-radius: 15px;
 }
 @media screen and (max-width: 800px) {
   .header-container a:not(:first-child) {display: none;}
