--- a/css/orders.css
+++ b/css/orders.css
@@ -267,6 +267,10 @@ li a:hover{
     padding: 16px;
 }
 
+.card-content *{
+    pointer-events: none;
+}
+
 .card-content h3 {
     font-size: 28px;
     margin-bottom: 8px;
@@ -275,7 +279,13 @@ li a:hover{
 .card-content p {
     color: #666;
     font-size: 15px;
-    line-height: 1.3;
+    line-height: 1.8;
+}
+
+.card-menu-section {
+    margin-top: 15px;
+    padding-top: 15px;
+    border-top: 1px solid #666;
 }
 
 .hide {
