--- a/css/orders.css
+++ b/css/orders.css
@@ -261,10 +261,10 @@ li a:hover, button:hover{
 .your-order .card {
     background-color: transparent;
     margin: 20px 0;
+    max-width: 350px;
 }
 
 .your-order ul {
-    max-width: 350px;
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -318,6 +318,12 @@ li a:hover, button:hover{
 .item-container {
     display: flex;
     justify-content: space-between;
+}
+
+.checkout button{
+    background-color: red;
+    padding: 15px 25px;
+    border-radius: 5px;
 }
 
 .hide {
